working on some styling

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,9 +6,11 @@ html
     != css('bcc')
     // != js('bootstrap.min')
   body
+    #background
+      img(src="/assets/img/zion.jpg")
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
           h3 Bible Community Church
-    .container
+    #content.container.container-fluid.well
       block content
