--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,12 +3,13 @@ html
   head
     title Bible Community Church
     != css('bootstrap.min')
+    != css('bootstrap-responsive.min')
     != css('bcc')
     // != js('bootstrap.min')
   body
     #background
       img(src="/assets/img/zion.jpg")
-    .navbar.navbar-fixed-top
+    #nav.navbar.navbar-fixed-top
       .navbar-inner
         .container
           h3 Bible Community Church
