--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,11 +7,9 @@ html
     != css('bcc')
     // != js('bootstrap.min')
   body
-    #background
-      img(src="/assets/img/zion.jpg")
     #nav.navbar.navbar-fixed-top
       .navbar-inner
         .container
           h3 Bible Community Church
-    #content.container.container-fluid.well
+    #content.container.container-fluid
       block content
