--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,78 @@
 extends layout
 
 block content
-  h1 Hello
-  
+  #welcome.section
+    h3 Welcome
+    p
+      | Bible Community Church is a body of believers dedicated to serving and worshipping 
+      | the one true God. BCC believes the Bible is the infallible and inerrant Word of
+      | God and that the Bible is sufficient in providing truth concerning salvation and
+      | living a life glorifying to the Lord Jesus Christ. As a church,
+      | we live to spread the good news of Jesus Christ to sinners everywhere
+      | so that they may receive salvation from God's wrath.
+
+  #location.anchor
+  .section
+    h3 Where are we located?
+    h4
+      address
+        | 1906 Beverly Blvd.
+        br
+        | Los Angeles, CA 90026
+    p Find us near downtown Los Angeles, situated off the 101 Freeway near the Alvarado exit. 
+    .map
+      <iframe width="938" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=1906+beverly+blvd,+los+angeles&amp;ie=UTF8&amp;hq=&amp;hnear=1906+Beverly+Blvd,+Los+Angeles,+California+90026&amp;gl=us&amp;ll=34.0705711,-118.268186&amp;spn=0.012141,0.0212&amp;t=v&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br />
+      
+
+  #schedule.anchor
+  .section
+    h3 When do we meet?
+    .schedule
+      h4 Sunday:
+      ul
+        li Sunday School: 12:00 PM
+        li Youth Bible Study: 12:00 PM
+        li 
+          h4 Corporate Worship: 1:00 PM
+            span.label.label-important Worship
+        li Lunch 3:00 PM
+        li Bible Study: 3:30 PM
+      
+      h4 Tuesday:
+      ul
+        li Small Group: 7:30 PM
+        li Women's Group: 7:30 PM
+      
+      h4 Wednesday:
+      ul
+        li Prayer Meeting: 8:00 PM
+      h4 Friday:
+      ul
+        li Youth Group: 8:00 PM
+
+  #doctrine.anchor
+  .section
+    h3 Doctrinal Statement
+    ol
+      li 
+        | We believe that the Bible is the inspired, inerrant and authoritative word of God, 
+        | and that Scripture is sufficient for salvation and godliness. (2 Timothy 3:16-17)
+      li We believe that there is only one true God, eternally existent in three persons: Father, Son and the Holy Spirit.
+      li 
+        | We believe that Jesus Christ, His virgin birth, His sinless life, 
+        | His vicarious and atoning death, His bodiliy resurrection, and His return in power and glory.
+      li
+        | We believe that all men are lost sinners and dead in their trangressions.  
+        | The solution to their unbearble power of sin is only in Jesus Christ.
+
+      li 
+        | We believe that the Holy Spirit is a person, not a force or thing.  
+        | The Holy Sprit is fully God and that only by the Holy Spirit 
+        | the sinner can turn to Christ in repentance and have faith in Jesus Christ.
+
+      li We believe that the sinner is saved by grace alone through faith alone in Christ alone.
+
+      li We believe that the church must be biblical and apostolic in order that she may obey the great commsion of Jesus Christ.
+    
+script(type='text/javascript')
+  $('#nav').scrollspy();
