--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,11 +5,21 @@ html
     != css('bootstrap.min')
     != css('bootstrap-responsive.min')
     != css('bcc')
-    // != js('bootstrap.min')
-  body
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js')
+    != js('bootstrap')
+  body(data-spy="scroll", data-target=".navbar")
     #nav.navbar.navbar-fixed-top
       .navbar-inner
         .container
           h3 Bible Community Church
+          ul.nav
+            li
+              a(href="#welcome") Welcome
+            li
+              a(href="#location") Location
+            li
+              a(href="#schedule") Schedule
+            li
+              a(href="#doctrine") Doctrine
     #content.container.container-fluid
       block content
