--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
     #nav.navbar.navbar-fixed-top
       .navbar-inner
         .container
-          h3 Bible Community Church
+          h3.brand Bible Community Church
           ul.nav
             li
               a(href="#welcome") Welcome
