--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,19 @@ html
     != css('bcc')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js')
     != js('bootstrap')
+    script(type="text/javascript")
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-26995728-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+
+    
   body(data-spy="scroll", data-target=".navbar")
     #nav.navbar.navbar-fixed-top
       .navbar-inner
@@ -23,3 +36,8 @@ html
               a(href="#doctrine") Doctrine
     #content.container.container-fluid
       block content
+    .footer
+      .container
+        a(href="/") Bible Community Church 
+        | | No Rights Reserved. All we claim is Christ. | 
+        a(href="https://github.com/wookimiii/bccnode", target="_blank") Github
