--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,4 +40,6 @@ html
       .container
         a(href="/") Bible Community Church 
         | | No Rights Reserved. All we claim is Christ. | 
-        a(href="https://github.com/wookimiii/bccnode", target="_blank") Github
+        a(href="https://github.com/wookimiii/bccnode", target="_blank") Github 
+        |  |
+        a(href="/shorter-catechisms") Catechisms
