--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -1,13 +1,27 @@
-header{
+@import 'nib'
+body
+  width: 100%
+  padding-top: 30px
+
+header
+  width: 100%
+  text-align: center
+  padding: 5px
   font-size: 2em;
   font-weight: 500;
   margin-bottom: 10px;
-}
+  position: fixed
+  top: 0
+  background: linear-gradient(top, white, #ccc);
 
-li{
+ul
+  margin: 0
+li
   list-style-type: none;
-}
 
+.catechism.even
+  background: rgba(0,0,0, 0.03)
+  padding: 5px
 .number{
   float: left;
   color: #999;
