--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -1,7 +1,8 @@
 @import 'nib'
 body
   width: 100%
-  padding-top: 30px
+  padding: 30px 0
+  box-sizing: border-box
 
 header
   width: 100%
@@ -12,12 +13,17 @@ header
   margin-bottom: 10px;
   position: fixed
   top: 0
+  left: 0
   background: linear-gradient(top, white, #ccc);
 
 ul
   margin: 0
 li
   list-style-type: none;
+
+.catechism
+  padding: 5px 10px
+  box-sizing: border-box
 
 .catechism.even
   background: rgba(0,0,0, 0.03)
