--- a/views/catechisms/layout.jade
+++ b/views/catechisms/layout.jade
@@ -9,6 +9,7 @@ html(ng-app='app')
     != js('lib/bootstrap')
     != js('lib/angular.min')
     != js('lib/angular-resource')
+    != js('lib/angular-sanitize')
     != js('models/catechisms')
     != js('app')
     meta(name="viewport", content="width=device-width, maximum-scale=1")
