fixing the verse text

--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -39,10 +39,16 @@ $number-width = 40px
   top: 4px
   
     
-.catechism label
-  width: 20px
-  float: left
-  margin: 0
+.catechism 
+  label
+    width: 20px
+    float: left
+    margin: 0
+  hr
+    margin: 0
+    visibility: hidden
+    height: 7pt
+    
 
 .question
   font-weight: bold
@@ -54,4 +60,6 @@ $number-width = 40px
 }
 .ref
   color: #0088cc;
+
+
 
