some renaming and form styling

--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -24,6 +24,14 @@ li
 .catechism
   padding: 5px 10px
   box-sizing: border-box
+  label
+    width: 20px
+    float: left
+    margin: 0
+  hr
+    margin: 0
+    visibility: hidden
+    height: 7pt
 
 .catechism.even
   background: rgba(0,0,0, 0.03)
@@ -38,18 +46,6 @@ $number-width = 40px
   position:relative
   top: 4px
   
-    
-.catechism 
-  label
-    width: 20px
-    float: left
-    margin: 0
-  hr
-    margin: 0
-    visibility: hidden
-    height: 7pt
-    
-
 .question
   font-weight: bold
 .question, .answer{
@@ -61,5 +57,8 @@ $number-width = 40px
 .ref
   color: #0088cc;
 
+#new
+  textarea
+    width: 90%
 
 
