--- a/views/catechisms/index.jade
+++ b/views/catechisms/index.jade
@@ -4,7 +4,7 @@ block content
   header Catechisms
   ng-view
 
-  #list.hidden(ng-controller='ListCtrl')
+  #list-template.hidden(ng-controller='ListCtrl')
     #error(ng-show='catechisms.length==0')
       |Loading...
     ul
