--- a/views/catechisms/new.jade
+++ b/views/catechisms/new.jade
@@ -1,18 +1,19 @@
-#new.hidden(ng-controller='NewCtrl')
-  h1 New Catechism
-  label Number:
-  input(ng-model='new.number', type='number')
-  label Question:
-  input(ng-model='new.question')
-  label Answer:
-  input(ng-model='new.answer')
-  label Verses:
-  input(ng-model='verses')
-  br
-  input(type='submit', ng-click='save()')
-
-  #new-debug
-    {{new}}
+#new-template.hidden(ng-controller='NewCtrl')
+  #new
+    h1 New Catechism
+    label Number:
+    input(ng-model='new.number', type='number')
+    label Question:
+    textarea(ng-model='new.question')
+    label Answer:
+    textarea(ng-model='new.answer')
+    label Verses:
+    textarea(ng-model='verses')
     br
-    | Verses: {{verses}}g
-  a(href="#") Home
+    input(type='submit', ng-click='save()')
+
+    #new-debug
+      {{new}}
+      br
+      | Verses: {{verses}}g
+    a(href="#") Home
