preserving order of verses and some styling

--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -8,13 +8,14 @@ header
   width: 100%
   text-align: center
   padding: 5px
-  font-size: 2em;
-  font-weight: 500;
-  margin-bottom: 10px;
+  font-size: 2em
+  font-weight: 500
+  margin-bottom: 10px
   position: fixed
   top: 0
   left: 0
-  background: linear-gradient(top, white, #ccc);
+  background: linear-gradient(top, white, #ccc)
+  z-index: 99
 
 ul
   margin: 0
@@ -31,7 +32,7 @@ li
   hr
     margin: 0
     visibility: hidden
-    height: 7pt
+    height: 4pt
 
 .catechism.even
   background: rgba(0,0,0, 0.03)
