adding backup script

--- a/views/catechisms/index.jade
+++ b/views/catechisms/index.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  header Catechisms
+  header 
+  |Catechisms
   ng-view
 
   #list-template.hidden(ng-controller='ListCtrl')
