adding underscore.js, font-awesome, removing bootstrap.min, building the selector page

--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -16,6 +16,10 @@ header
   left: 0
   background: linear-gradient(top, white, #ccc)
   z-index: 99
+  .menu-btn
+    float: left
+    font-size: 20px
+    margin-left: 5px;
 
 ul
   margin: 0
@@ -62,4 +66,23 @@ $number-width = 40px
   textarea
     width: 90%
 
+
+#selectors
+  $border = solid 1px #999
+  background: #333
+  color: #fff
+  border-left: $border
+  #preview
+    font-size: 15px
+    padding: 5px;
+    border-bottom: $border
+  .selector
+    font-size: 20px
+    float:left
+    border: $border
+    border-left: none;
+    border-top: none
+    padding: 3px 6px
+    text-align: center;
+    background: #333
 
