--- a/views/catechisms/layout.jade
+++ b/views/catechisms/layout.jade
@@ -2,10 +2,12 @@ doctype 5
 html(ng-app='app')
   head
     title Bible Community Church
-    != css('bootstrap.min')
-    != css('bootstrap-responsive.min')
+    != css('bootstrap')
+    != css('bootstrap-responsive')
+    != css('font-awesome')
     != css('catechisms')
     != js('lib/jquery-1.8.3.min')
+    != js('lib/underscore-min')
     != js('lib/bootstrap')
     != js('lib/angular.min')
     != js('lib/angular-resource')
