--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype 5
 html
   head
     title Bible Community Church
-    != css('bootstrap.min')
+    != css('bootstrap')
     != css('bootstrap-responsive.min')
     != css('bcc')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js')
