fixing the filter for reals, adding better styling for the selectors

--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -85,4 +85,7 @@ $number-width = 40px
     padding: 3px 6px
     text-align: center;
     background: #333
+    width: 10%;
+    box-sizing: border-box;
+    
 
