7 selectors in a row

--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -72,6 +72,7 @@ $number-width = 40px
   background: #333
   color: #fff
   border-left: $border
+  box-sizing: border-box;
   #preview
     font-size: 15px
     padding: 5px;
@@ -85,7 +86,7 @@ $number-width = 40px
     padding: 3px 6px
     text-align: center;
     background: #333
-    width: 10%;
+    width: 14.2%;
     box-sizing: border-box;
     
 
