--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -18,6 +18,7 @@ header
   background: linear-gradient(top, white, #ccc)
   box-shadow: 0px 1px 3px #333
   z-index: 99
+  text-shadow: 0px 1px 1px white
   .menu-btn
     float: left
     font-size: 20px
