--- a/assets/css/catechisms.styl
+++ b/assets/css/catechisms.styl
@@ -22,14 +22,16 @@ header
   .menu-btn
     float: left
     font-size: 20px
-    margin-left: 5px;
+    position: relative
+    left: 5px;
+    width: 0
 
 ul
   margin: 0
 li
   list-style-type: none;
 .catechisms
-  background-color: rgba(255,255,255, 0.7);
+  background-color: rgba(255,255,255, 0.4);
 .catechism
   padding: 5px 5px
   box-sizing: border-box
