--- a/views/index.jade
+++ b/views/index.jade
@@ -16,10 +16,10 @@ block content
     h3 Where are we located?
     h4
       address
-        | 1908 Beverly Blvd.
+        | 2869 7th St
         br
-        | Los Angeles, CA 90026
-    p Find us near downtown Los Angeles, situated off the 101 Freeway near the Alvarado exit. 
+        | Los Angeles, CA 90005
+    p Find us in the heart of Los Angeles near Koreatown
     .map
       <iframe width="938" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=1906+beverly+blvd,+los+angeles&amp;ie=UTF8&amp;hq=&amp;hnear=1906+Beverly+Blvd,+Los+Angeles,+California+90026&amp;gl=us&amp;ll=34.0705711,-118.268186&amp;spn=0.012141,0.0212&amp;t=v&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br />
       
