--- a/views/index.jade
+++ b/views/index.jade
@@ -16,12 +16,13 @@ block content
     h3 Where are we located?
     h4
       address
-        | 2869 7th St
+        | 2869 7th Street
         br
         | Los Angeles, CA 90005
     p Find us in the heart of Los Angeles near Koreatown
+    p Enter through the glass door and head up the stairs. Entrance is on the left.
     .map
-      <iframe width="938" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=1906+beverly+blvd,+los+angeles&amp;ie=UTF8&amp;hq=&amp;hnear=1906+Beverly+Blvd,+Los+Angeles,+California+90026&amp;gl=us&amp;ll=34.0705711,-118.268186&amp;spn=0.012141,0.0212&amp;t=v&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br />
+      <iframe width="938" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=2869+7th+Street,+Los+Angeles,+CA&amp;aq=1&amp;oq=2869+7th+Street&amp;sll=34.020479,-118.411732&amp;sspn=0.803588,1.381531&amp;ie=UTF8&amp;hq=&amp;hnear=2869+7th+St,+Los+Angeles,+California+90005&amp;t=m&amp;z=14&amp;iwloc=A&amp;ll=34.065819,-118.286147&amp;output=embed"></iframe>
       
 
   #schedule.anchor
