--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,24 +1,14 @@
+include mixins/google_analytics
+
 doctype 5
 html
   head
     title Bible Community Church
-    != css('bootstrap')
-    != css('bootstrap-responsive.min')
-    != css('bcc')
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js')
-    != js('lib/bootstrap')
-    script(type="text/javascript")
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-26995728-1']);
-      _gaq.push(['_trackPageview']);
+    != css('home', {compress: true})
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+    mixin google-analytics
 
-
+    block head
     
   body(data-spy="scroll", data-target=".navbar")
     #nav.navbar.navbar-fixed-top
@@ -43,3 +33,6 @@ html
         a(href="https://github.com/wookimiii/bccnode", target="_blank") Github 
         |  |
         a(href="/shorter-catechisms") Catechisms
+    
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
+    block javascript
