--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,27 @@
 doctype 5
-html
-  head
+// if IE 7
+    html.ie.ie7.no-js(lang="en-US")
+// if IE 8
+    html.ie.ie8.no-js(lang="en-US")
+// if !(IE 7) | !(IE 8)
+    html.no-js(lang="en-US")
+// else
+    html
+
+head
     title Bible Community Church
-    != css('bootstrap')
-    != css('bootstrap-responsive.min')
-    != css('bcc')
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js')
-    != js('lib/bootstrap')
+    meta(charset='UTF-8')
+    meta(name='viewport', content='width=device-width')
+
+    link(rel='stylesheet', href='/css/shortcodes.css')
+    link(rel='stylesheet', href='/css/style.css')
+    link(rel='stylesheet', href='/css/responsive.css')
+    link(href='http://fonts.googleapis.com/css?family=Oswald:400,300,700&amp;subset=latin,latin-ext', rel='stylesheet', type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Yeseva+One', rel='stylesheet', type='text/css')
+    
+    script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js')
+
     script(type="text/javascript")
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-26995728-1']);
@@ -17,25 +32,10 @@ html
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-
-
     
-  body(data-spy="scroll", data-target=".navbar")
-    #nav.navbar.navbar-fixed-top
-      .navbar-inner
-        .container
-          h3.brand Bible Community Church
-          ul.nav
-            li
-              a(href="#welcome") Welcome
-            li
-              a(href="#location") Location
-            li
-              a(href="#schedule") Schedule
-            li
-              a(href="#doctrine") Doctrine
-    #content.container.container-fluid
-      block content
+  body.onepage
+    block content
+
     .footer
       .container
         a(href="/") Bible Community Church 
